--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: '23'
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
-      - run: pnpm run fixpack -- --dryRun
+      - run: pnpm run fixpack --dryRun
       - run: pnpm run fmt
       - run: pnpm run lint
       # - run: npm run build --if-present
