--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-typescript",
+  "name": "template-trpc",
   "description": "",
-  "version": "2.0.0",
+  "version": "0.0.1",
   "author": "",
   "dependencies": {
     "typescript": "<5.7.0"
