--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "fmt:write": "prettier . --write",
     "lint": "eslint src",
     "start": "tsx src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "w:be": "pnpm -F @wbydo/serverside"
   },
   "type": "module"
 }
