--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "fixpack": "^4.0.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.2",
+    "turbo": "^2.3.3",
     "typescript-eslint": "^8.15.0"
   },
   "license": "MIT",
+  "packageManager": "pnpm@9.15.2",
   "private": true,
   "scripts": {
     "fixpack": "fixpack",
